[package]
name = "neon-daze-game"
version = "0.1.0"
authors = ["WayfaringBloke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version="0.5.0", default-features=false }
bevy_webgl2 = { version="0.5.0", optional=true }
bevy_rapier2d = { version="0.11.0", default-features=false }
rapier2d = { version="0.11.0", default-features=false }
rand = "0.8"
getrandom = { version = "0.2", optional=true, features=["js"] }

[features]
default = [
    "bevy/bevy_winit", 
    "bevy/render", 
    "bevy/png",
    "bevy_rapier2d/default",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2",
  "bevy_rapier2d/wasm-bindgen",
  "rapier2d/wasm-bindgen",
  "getrandom"
]